--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,19 @@
 venv/
 .venv/
 
+# Python cache files
+__pycache__/
+
+# Large data files
+data/
+
+# IDE files
+.vscode/
+
+# Python virtual environment
+venv/
+.venv/
+
 # Large data folders
 data/
 models/
